# Decision-Equivalent-VJEPA-for-Action-Relevant-World-Models

./: .gitignore  DATA_STORAGE.md  EXTERNAL_ARTIFACT_INVENTORY.csv  GITHUB_UPLOAD.md  README.md  RELEASE_MANIFEST_SHA256.csv  REPRODUCE.md  main.tex  publish_to_github.sh  pyproject.toml  verify_release.py
configs/: ablation_smoke.yaml  backbone_validation_dinov2.yaml  banded_de_vjepa.yaml  bjepa_smoke.yaml  cem_mpc_main.yaml  cem_mpc_progress512_main.yaml  cem_mpc_progress512_smoke.yaml  cem_mpc_smoke.yaml  closed_loop_lambda.yaml  closed_loop_main.yaml  closed_loop_pilot.yaml  closed_loop_smoke.yaml  core_vjepa_bjepa_de.yaml  cross_method_metaworld.yaml  cross_method_pusht.yaml  cross_method_pusht_smoke.yaml  de_bjepa_lambda_sweep.yaml  de_bjepa_policy_geometry.yaml  kl_vs_action_mse.yaml  lambda_sweep.yaml  multistep_de_training.yaml  multistep_de_training_smoke.yaml  multistep_diagnostic.yaml  pilot.yaml  pilot_dinov2.yaml  pilot_reproduction.yaml  planner_ablation.yaml  planner_ablation_smoke.yaml  policy_geometry_ablation.yaml  progress_head.yaml  pusht.yaml  smoke.yaml  value_head.yaml  value_head_smoke.yaml  value_planner_main.yaml  value_planner_progress512_main.yaml  value_planner_progress512_smoke.yaml  value_planner_smoke.yaml
results/: bjepa_smoke_summary.csv  cem_mpc_progress512_runner_summary.csv  cem_mpc_progress512_smoke_runner_summary.csv  cem_mpc_progress512_statistics.csv  cem_mpc_progress512_summary.csv  cem_mpc_runner_summary.csv  cem_mpc_smoke_runner_summary.csv  cem_mpc_smoke_statistics.csv  cem_mpc_smoke_summary.csv  cem_mpc_statistics.csv  (+43 more)
(+72 files in other folders)
