[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "de-vjepa"
version = "0.1.0"
description = "Decision-Equivalent Variational JEPA experiments for MetaWorld"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "gymnasium>=1.0,<2",
  "matplotlib>=3.8,<4",
  "metaworld>=3.0,<4",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "Pillow>=10,<12",
  "pyarrow>=16,<20",
  "PyYAML>=6,<7",
  "scipy>=1.12,<2",
  "torch>=2.5",
  "torchvision>=0.20",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.9,<1"]

[project.scripts]
devjepa-collect = "devjepa.collect:main"
devjepa-encode = "devjepa.encode:main"
devjepa-train-bc = "devjepa.train_bc:main"
devjepa-train = "devjepa.train_predictor:main"
devjepa-evaluate = "devjepa.evaluate:main"
devjepa-encode-shifts = "devjepa.encode_shifts:main"
devjepa-evaluate-independent = "devjepa.evaluate_independent:main"
devjepa-run-experiment = "devjepa.ablation:main"
devjepa-analyze-results = "devjepa.analysis:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
